refactor(core): enhance code structure and readability
- Refactored classes in the `sudoku` package for improved maintainability.
- Renamed methods and added comments for better clarity.
- Optimized algorithms in the `solver` package to improve performance.
- Updated test cases in `SudokuTest` to include edge case coverage.